Other: Updated translations. [skip ci]

--- a/packages/ckeditor5-ui/lang/translations/ne.po
+++ b/packages/ckeditor5-ui/lang/translations/ne.po
@@ -30,12 +30,12 @@ msgstr "ब्लक सम्पादन गर्न"
 
 msgctxt "Label for a button showing the next thing (tab, page, etc.)."
 msgid "Next"
-msgstr ""
+msgstr "अर्को"
 
 msgctxt "Label for a button showing the previous thing (tab, page, etc.)."
 msgid "Previous"
-msgstr ""
+msgstr "अघिल्लो"
 
 msgctxt "Label for a 'page X of Y' status of a typical next/previous page navigation."
 msgid "%0 of %1"
-msgstr ""
+msgstr "०% मध्ये १%"
