--- a/packages/ckeditor5-ui/lang/translations/it.po
+++ b/packages/ckeditor5-ui/lang/translations/it.po
@@ -30,12 +30,12 @@ msgstr "Modifica blocco"
 
 msgctxt "Label for a button showing the next thing (tab, page, etc.)."
 msgid "Next"
-msgstr ""
+msgstr "Avanti"
 
 msgctxt "Label for a button showing the previous thing (tab, page, etc.)."
 msgid "Previous"
-msgstr ""
+msgstr "Indietro"
 
 msgctxt "Label for a 'page X of Y' status of a typical next/previous page navigation."
 msgid "%0 of %1"
-msgstr ""
+msgstr "%0 di %1"
