--- a/packages/ckeditor5-font/lang/translations/fr.po
+++ b/packages/ckeditor5-font/lang/translations/fr.po
@@ -56,6 +56,10 @@ msgctxt "Label or a button that removes the color from the text (font color and 
 msgid "Remove color"
 msgstr "Enlever la couleur"
 
+msgctxt "Title of a color picker section containing the colors currently used in the document."
+msgid "Document colors"
+msgstr "Couleurs du document"
+
 msgctxt "Label of a button that applies a black text color (font color and background)"
 msgid "Black"
 msgstr "Noir"
