--- a/packages/ckeditor5-heading/lang/translations/tr.po
+++ b/packages/ckeditor5-heading/lang/translations/tr.po
@@ -42,12 +42,12 @@ msgstr "3. Seviye Başlık"
 
 msgctxt "Dropdown option label for the heading level 4 format."
 msgid "Heading 4"
-msgstr ""
+msgstr "4. Seviye Başlık"
 
 msgctxt "Dropdown option label for the heading level 5 format."
 msgid "Heading 5"
-msgstr ""
+msgstr "5. Seviye Başlık"
 
 msgctxt "Dropdown option label for the heading level 6 format."
 msgid "Heading 6"
-msgstr ""
+msgstr "6. Seviye Başlık"
