--- a/packages/ckeditor5-link/lang/translations/cs.po
+++ b/packages/ckeditor5-link/lang/translations/cs.po
@@ -39,3 +39,11 @@ msgstr "Otevřít odkaz v nové kartě"
 msgctxt "Label explaining that a link has no URL set (the URL is empty)."
 msgid "This link has no URL"
 msgstr "Tento odkaz nemá žádnou URL"
+
+msgctxt "The label of the switch button that controls whether the edited link will open in a new tab."
+msgid "Open in a new tab"
+msgstr ""
+
+msgctxt "The label of the switch button that controls whether the edited link refers to downloadable resource."
+msgid "Downloadable"
+msgstr ""
