--- a/packages/ckeditor5-link/lang/translations/de.po
+++ b/packages/ckeditor5-link/lang/translations/de.po
@@ -39,3 +39,11 @@ msgstr "Link im neuen Tab öffnen"
 msgctxt "Label explaining that a link has no URL set (the URL is empty)."
 msgid "This link has no URL"
 msgstr "Dieser Link hat keine Adresse"
+
+msgctxt "The label of the switch button that controls whether the edited link will open in a new tab."
+msgid "Open in a new tab"
+msgstr "In neuem Tab öffnen"
+
+msgctxt "The label of the switch button that controls whether the edited link refers to downloadable resource."
+msgid "Downloadable"
+msgstr "Herunterladbar"
