--- a/packages/ckeditor5-link/lang/translations/fi.po
+++ b/packages/ckeditor5-link/lang/translations/fi.po
@@ -39,3 +39,11 @@ msgstr "Avaa linkki uudessa välilehdessä"
 msgctxt "Label explaining that a link has no URL set (the URL is empty)."
 msgid "This link has no URL"
 msgstr "Linkillä ei ole URL-osoitetta"
+
+msgctxt "The label of the switch button that controls whether the edited link will open in a new tab."
+msgid "Open in a new tab"
+msgstr ""
+
+msgctxt "The label of the switch button that controls whether the edited link refers to downloadable resource."
+msgid "Downloadable"
+msgstr ""
