--- a/packages/ckeditor5-link/lang/translations/gl.po
+++ b/packages/ckeditor5-link/lang/translations/gl.po
@@ -39,3 +39,11 @@ msgstr "Abrir a ligazón nunha nova lapela"
 msgctxt "Label explaining that a link has no URL set (the URL is empty)."
 msgid "This link has no URL"
 msgstr "Esta ligazón non ten URL"
+
+msgctxt "The label of the switch button that controls whether the edited link will open in a new tab."
+msgid "Open in a new tab"
+msgstr "Abrir nunha nova lapela"
+
+msgctxt "The label of the switch button that controls whether the edited link refers to downloadable resource."
+msgid "Downloadable"
+msgstr "Descargábel"
