--- a/packages/ckeditor5-link/lang/translations/id.po
+++ b/packages/ckeditor5-link/lang/translations/id.po
@@ -39,3 +39,11 @@ msgstr "Buka tautan di tab baru"
 msgctxt "Label explaining that a link has no URL set (the URL is empty)."
 msgid "This link has no URL"
 msgstr "Tautan ini tidak memiliki URL"
+
+msgctxt "The label of the switch button that controls whether the edited link will open in a new tab."
+msgid "Open in a new tab"
+msgstr "Buka di tab baru"
+
+msgctxt "The label of the switch button that controls whether the edited link refers to downloadable resource."
+msgid "Downloadable"
+msgstr "Dapat diunduh"
