--- a/packages/ckeditor5-link/lang/translations/it.po
+++ b/packages/ckeditor5-link/lang/translations/it.po
@@ -39,3 +39,11 @@ msgstr "Apri collegamento in nuova scheda"
 msgctxt "Label explaining that a link has no URL set (the URL is empty)."
 msgid "This link has no URL"
 msgstr "Questo collegamento non ha un URL"
+
+msgctxt "The label of the switch button that controls whether the edited link will open in a new tab."
+msgid "Open in a new tab"
+msgstr "Apri in una nuova scheda"
+
+msgctxt "The label of the switch button that controls whether the edited link refers to downloadable resource."
+msgid "Downloadable"
+msgstr "Scaricabile"
