--- a/packages/ckeditor5-link/lang/translations/lt.po
+++ b/packages/ckeditor5-link/lang/translations/lt.po
@@ -39,3 +39,11 @@ msgstr "Atidaryti nuorodą naujame skirtuke"
 msgctxt "Label explaining that a link has no URL set (the URL is empty)."
 msgid "This link has no URL"
 msgstr "Ši nuorda neturi URL"
+
+msgctxt "The label of the switch button that controls whether the edited link will open in a new tab."
+msgid "Open in a new tab"
+msgstr ""
+
+msgctxt "The label of the switch button that controls whether the edited link refers to downloadable resource."
+msgid "Downloadable"
+msgstr ""
