--- a/packages/ckeditor5-link/lang/translations/no.po
+++ b/packages/ckeditor5-link/lang/translations/no.po
@@ -39,3 +39,11 @@ msgstr "Åpne lenke i ny fane"
 msgctxt "Label explaining that a link has no URL set (the URL is empty)."
 msgid "This link has no URL"
 msgstr "Denne lenken mangler en URL"
+
+msgctxt "The label of the switch button that controls whether the edited link will open in a new tab."
+msgid "Open in a new tab"
+msgstr "Åpne i ny fane"
+
+msgctxt "The label of the switch button that controls whether the edited link refers to downloadable resource."
+msgid "Downloadable"
+msgstr "Nedlastbar"
