--- a/packages/ckeditor5-link/lang/translations/pl.po
+++ b/packages/ckeditor5-link/lang/translations/pl.po
@@ -30,12 +30,20 @@ msgstr "Adres URL"
 
 msgctxt "Button opening the Link URL editing balloon."
 msgid "Edit link"
-msgstr "Edytuj łącze"
+msgstr "Edytuj odnośnik"
 
 msgctxt "Button opening the link in new browser tab."
 msgid "Open link in new tab"
-msgstr "Otwórz łącze w nowym oknie"
+msgstr "Otwórz odnośnik w nowym oknie"
 
 msgctxt "Label explaining that a link has no URL set (the URL is empty)."
 msgid "This link has no URL"
-msgstr "Nie podano adresu URL łącza"
+msgstr "Nie podano adresu URL odnośnika"
+
+msgctxt "The label of the switch button that controls whether the edited link will open in a new tab."
+msgid "Open in a new tab"
+msgstr "Otwórz w nowej zakładce"
+
+msgctxt "The label of the switch button that controls whether the edited link refers to downloadable resource."
+msgid "Downloadable"
+msgstr "Do pobrania"
