--- a/packages/ckeditor5-link/lang/translations/sr.po
+++ b/packages/ckeditor5-link/lang/translations/sr.po
@@ -39,3 +39,11 @@ msgstr "Отвори линк у новом прозору"
 msgctxt "Label explaining that a link has no URL set (the URL is empty)."
 msgid "This link has no URL"
 msgstr "Линк не садржи УРЛ"
+
+msgctxt "The label of the switch button that controls whether the edited link will open in a new tab."
+msgid "Open in a new tab"
+msgstr ""
+
+msgctxt "The label of the switch button that controls whether the edited link refers to downloadable resource."
+msgid "Downloadable"
+msgstr ""
