--- a/packages/ckeditor5-ui/lang/translations/pl.po
+++ b/packages/ckeditor5-ui/lang/translations/pl.po
@@ -18,24 +18,24 @@ msgstr ""
 
 msgctxt "Title of the CKEditor5 editor."
 msgid "Rich Text Editor, %0"
-msgstr "Edytor tekstu RTF, %0"
+msgstr "Edytor tekstu sformatowanego, %0"
 
 msgctxt "Title of the CKEditor5 editor."
 msgid "Rich Text Editor"
-msgstr "Edytor tekstu RTF"
+msgstr "Edytor tekstu sformatowanego"
 
 msgctxt "Label of the block toolbar icon (a block toolbar is displayed next to each paragraph, heading, list item, etc. and contains e.g. block formatting options)"
 msgid "Edit block"
-msgstr "Edytuj block"
+msgstr "Edytuj blok"
 
 msgctxt "Label for a button showing the next thing (tab, page, etc.)."
 msgid "Next"
-msgstr ""
+msgstr "Następny"
 
 msgctxt "Label for a button showing the previous thing (tab, page, etc.)."
 msgid "Previous"
-msgstr ""
+msgstr "Poprzedni"
 
 msgctxt "Label for a 'page X of Y' status of a typical next/previous page navigation."
 msgid "%0 of %1"
-msgstr ""
+msgstr "%0 z %1"
