--- a/packages/ckeditor5-ui/lang/translations/zh.po
+++ b/packages/ckeditor5-ui/lang/translations/zh.po
@@ -30,12 +30,12 @@ msgstr "編輯區塊"
 
 msgctxt "Label for a button showing the next thing (tab, page, etc.)."
 msgid "Next"
-msgstr ""
+msgstr "下一"
 
 msgctxt "Label for a button showing the previous thing (tab, page, etc.)."
 msgid "Previous"
-msgstr ""
+msgstr "上一"
 
 msgctxt "Label for a 'page X of Y' status of a typical next/previous page navigation."
 msgid "%0 of %1"
-msgstr ""
+msgstr "%0/%1"
