--- a/packages/ckeditor5-font/lang/translations/uk.po
+++ b/packages/ckeditor5-font/lang/translations/uk.po
@@ -58,7 +58,7 @@ msgstr "Видалити колір"
 
 msgctxt "Title of a color picker section containing the colors currently used in the document."
 msgid "Document colors"
-msgstr ""
+msgstr "Кольори документу"
 
 msgctxt "Label of a button that applies a black text color (font color and background)"
 msgid "Black"
