--- a/packages/ckeditor5-bookmark/lang/contexts.json
+++ b/packages/ckeditor5-bookmark/lang/contexts.json
@@ -4,5 +4,6 @@
 	"Add bookmark name": "The label of the input in the bookmark insert form.",
 	"Enter the bookmark name without spaces.": "The description of bookmark input in the bookmark insert form.",
 	"Bookmark name cannot contain space characters.": "The error message. Displayed when provided name includes spaces.",
+	"Bookmark name already exists.": "The error message. Displayed when provided name already exists.",
 	"bookmark widget": "The label for the bookmark widget."
 }
