--- a/packages/ckeditor5-bookmark/lang/contexts.json
+++ b/packages/ckeditor5-bookmark/lang/contexts.json
@@ -1,7 +1,7 @@
 {
 	"Bookmark": "The label of the bookmark toolbar button. Also, a bookmark form header.",
 	"Insert": "The button in the bookmark insert form.",
-	"Add bookmark name": "The label of the input in the bookmark insert form.",
+	"Add bookmark": "The label of the input in the bookmark insert form.",
 	"Enter the bookmark name without spaces.": "The description of bookmark input in the bookmark insert form.",
 	"Bookmark must not be empty.": "The error message. Displayed when the bookmark name is empty.",
 	"Bookmark name cannot contain space characters.": "The error message. Displayed when provided name includes spaces.",
