--- a/packages/ckeditor5-bookmark/lang/contexts.json
+++ b/packages/ckeditor5-bookmark/lang/contexts.json
@@ -6,5 +6,6 @@
 	"Bookmark must not be empty.": "The error message. Displayed when the bookmark name is empty.",
 	"Bookmark name cannot contain space characters.": "The error message. Displayed when provided name includes spaces.",
 	"Bookmark name already exists.": "The error message. Displayed when provided name already exists.",
-	"bookmark widget": "The label for the bookmark widget."
+	"bookmark widget": "The label for the bookmark widget.",
+	"Bookmark name": "The tooltip for the bookmark name in the bookmark preview."
 }
