--- a/packages/ckeditor5-link/lang/contexts.json
+++ b/packages/ckeditor5-link/lang/contexts.json
@@ -10,5 +10,8 @@
 	"Open in a new tab": "The label of the switch button that controls whether the edited link will open in a new tab.",
 	"Downloadable": "The label of the switch button that controls whether the edited link refers to downloadable resource.",
 	"Create link": "Keystroke description for assistive technologies: keystroke for creating a link.",
-	"Move out of a link": "Keystroke description for assistive technologies: keystroke for moving out of a link."
+	"Move out of a link": "Keystroke description for assistive technologies: keystroke for moving out of a link.",
+	"Bookmarks": "The label of a button for displaying a list of bookmarks.",
+	"Advanced": "The label of a button for displaying advanced link settings.",
+	"Displayed text": "The label of the input field for the displayed text of the link."
 }
