--- a/packages/ckeditor5-ui/lang/translations/oc.po
+++ b/packages/ckeditor5-ui/lang/translations/oc.po
@@ -164,39 +164,39 @@ msgid "Move focus in and out of an active dialog window"
 msgstr ""
 
 msgctxt "The label of the top-level application menu bar menu containing buttons and features related to the whole document (e.g. export to PDF, import from Word, etc.)."
-msgid "File"
+msgid "MENU_BAR_MENU_FILE"
 msgstr ""
 
 msgctxt "The label of the top-level application menu bar menu containing buttons and features related to general editing (e.g. undo, redo, select all, etc.)."
-msgid "Edit"
+msgid "MENU_BAR_MENU_EDIT"
 msgstr ""
 
 msgctxt "The label of the top-level application menu bar menu containing buttons and features related to the view of the editor (e.g. show source)."
-msgid "View"
+msgid "MENU_BAR_MENU_VIEW"
 msgstr ""
 
 msgctxt "The label of the top-level application menu bar menu containing buttons and features that insert content (e.g. insert table, insert image, etc.)."
-msgid "Insert"
+msgid "MENU_BAR_MENU_INSERT"
 msgstr ""
 
 msgctxt "The label of the top-level application menu bar menu containing buttons and features related to content formatting (e.g. bold, font color, heading, etc.)."
-msgid "Format"
+msgid "MENU_BAR_MENU_FORMAT"
 msgstr ""
 
 msgctxt "The label of the top-level application menu bar menu containing various editor tools (e.g. AI assistant, track changes, etc.)."
-msgid "Tools"
+msgid "MENU_BAR_MENU_TOOLS"
 msgstr ""
 
 msgctxt "The label of the top-level application menu bar menu containing buttons and features helping users to learn about the editor (e.g. accessibility help)."
-msgid "Help"
+msgid "MENU_BAR_MENU_HELP"
 msgstr ""
 
 msgctxt "The label of the application menu bar menu containing buttons and features that apply formatting to a text (e.g. bold, italic, etc.)."
-msgid "Text"
+msgid "MENU_BAR_MENU_TEXT"
 msgstr ""
 
 msgctxt "The label of the application menu bar menu containing buttons and features that control the font of the edited content (e.g. font size, font color, etc.)."
-msgid "Font"
+msgid "MENU_BAR_MENU_FONT"
 msgstr ""
 
 msgctxt "The accessible label of the editor menu bar used by assistive technologies."
