--- a/packages/ckeditor5-link/lang/contexts.json
+++ b/packages/ckeditor5-link/lang/contexts.json
@@ -15,5 +15,6 @@
 	"Bookmarks": "Title for a feature displaying a list of bookmarks.",
 	"No bookmarks available.": "A message displayed instead of a list of bookmarks if it is empty.",
 	"Advanced": "Title for a feature displaying advanced link settings.",
-	"Displayed text": "The label of the input field for the displayed text of the link."
+	"Displayed text": "The label of the input field for the displayed text of the link.",
+	"Back": "The label of the button that returns to the previous view."
 }
