--- a/packages/ckeditor5-link/lang/translations/ar.po
+++ b/packages/ckeditor5-link/lang/translations/ar.po
@@ -61,4 +61,4 @@ msgstr "ابتعدْ عن الرابط"
 
 msgctxt "Button scrolling to the link target."
 msgid "Scroll to target"
-msgstr ""
+msgstr "انتقل إلى الهدف"
