--- a/packages/ckeditor5-link/lang/translations/de.po
+++ b/packages/ckeditor5-link/lang/translations/de.po
@@ -61,4 +61,4 @@ msgstr "Linkauswahl aufheben"
 
 msgctxt "Button scrolling to the link target."
 msgid "Scroll to target"
-msgstr ""
+msgstr "Zum Ziel scrollen"
