--- a/packages/ckeditor5-link/lang/translations/es.po
+++ b/packages/ckeditor5-link/lang/translations/es.po
@@ -61,4 +61,4 @@ msgstr "Sale de un enlace"
 
 msgctxt "Button scrolling to the link target."
 msgid "Scroll to target"
-msgstr ""
+msgstr "Desplazarse hasta el destino"
