--- a/packages/ckeditor5-link/lang/translations/nl.po
+++ b/packages/ckeditor5-link/lang/translations/nl.po
@@ -61,4 +61,4 @@ msgstr "Uit een link gaan"
 
 msgctxt "Button scrolling to the link target."
 msgid "Scroll to target"
-msgstr ""
+msgstr "Scroll naar doel"
