--- a/packages/ckeditor5-link/lang/translations/sv.po
+++ b/packages/ckeditor5-link/lang/translations/sv.po
@@ -61,4 +61,4 @@ msgstr "Flytta bort från länken"
 
 msgctxt "Button scrolling to the link target."
 msgid "Scroll to target"
-msgstr ""
+msgstr "Bläddra till mål"
