--- a/packages/ckeditor5-link/lang/translations/tr.po
+++ b/packages/ckeditor5-link/lang/translations/tr.po
@@ -61,4 +61,4 @@ msgstr "Bir bağlantıdan çık"
 
 msgctxt "Button scrolling to the link target."
 msgid "Scroll to target"
-msgstr ""
+msgstr "Hedefe doğru kaydır"
