--- a/packages/ckeditor5-link/lang/translations/bg.po
+++ b/packages/ckeditor5-link/lang/translations/bg.po
@@ -61,4 +61,4 @@ msgstr "Излизане от линк"
 
 msgctxt "Button scrolling to the link target."
 msgid "Scroll to target"
-msgstr ""
+msgstr "Превъртете до целта"
