--- a/packages/ckeditor5-link/lang/translations/el.po
+++ b/packages/ckeditor5-link/lang/translations/el.po
@@ -61,4 +61,4 @@ msgstr "Μετακίνηση από έναν σύνδεσμο"
 
 msgctxt "Button scrolling to the link target."
 msgid "Scroll to target"
-msgstr ""
+msgstr "Κάντε κύλιση στον στόχο"
