--- a/packages/ckeditor5-link/lang/translations/et.po
+++ b/packages/ckeditor5-link/lang/translations/et.po
@@ -61,4 +61,4 @@ msgstr "Välju lingist"
 
 msgctxt "Button scrolling to the link target."
 msgid "Scroll to target"
-msgstr ""
+msgstr "Keri sihtmärgini"
