--- a/packages/ckeditor5-link/lang/translations/hu.po
+++ b/packages/ckeditor5-link/lang/translations/hu.po
@@ -61,4 +61,4 @@ msgstr "Kilépés egy linkből"
 
 msgctxt "Button scrolling to the link target."
 msgid "Scroll to target"
-msgstr ""
+msgstr "Görgetés a célhoz"
