--- a/packages/ckeditor5-link/lang/translations/id.po
+++ b/packages/ckeditor5-link/lang/translations/id.po
@@ -61,4 +61,4 @@ msgstr "Keluar dari tautan"
 
 msgctxt "Button scrolling to the link target."
 msgid "Scroll to target"
-msgstr ""
+msgstr "Gulir ke target"
