--- a/packages/ckeditor5-link/lang/translations/ms.po
+++ b/packages/ckeditor5-link/lang/translations/ms.po
@@ -61,4 +61,4 @@ msgstr "Alih keluar pautan"
 
 msgctxt "Button scrolling to the link target."
 msgid "Scroll to target"
-msgstr ""
+msgstr "Tatal ke sasaran"
