--- a/packages/ckeditor5-link/lang/translations/sr.po
+++ b/packages/ckeditor5-link/lang/translations/sr.po
@@ -61,4 +61,4 @@ msgstr "Idi sa veze"
 
 msgctxt "Button scrolling to the link target."
 msgid "Scroll to target"
-msgstr ""
+msgstr "Pomeraj do ciljne veze"
