--- a/packages/ckeditor5-link/lang/translations/pt-br.po
+++ b/packages/ckeditor5-link/lang/translations/pt-br.po
@@ -7,7 +7,7 @@
 #
 msgid ""
 msgstr ""
-"Language: pt-br\n"
+"Language: pt_BR\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 
