--- a/packages/ckeditor5-link/lang/translations/zh.po
+++ b/packages/ckeditor5-link/lang/translations/zh.po
@@ -7,7 +7,7 @@
 #
 msgid ""
 msgstr ""
-"Language: zh-tw\n"
+"Language: zh_TW\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 
